manifests/base/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cluster-audit-kabana
  namespace: cluster-audit
spec:
  hosts:
    - kibana.cluster-audit.local
  gateways:
  - istio-ingressgateway.istio-system.svc.cluster.local
  http:
    - route:
        - destination:
            host: kibana-kb-http
            port:
              number: 5601
